# rmxt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix  rustfmt.toml
.github/workflows/: rust.yml  tagging.yml
docs/: README.md  advanced-features.md  advanced.md  install.md  installation.md  shell-integration.md  troubleshooting.md  usage.md
scripts/: install.sh  uninstall.sh
src/: args.rs  main.rs
