[package]
name = "rmxt"
version = "0.1.10"
edition = "2024"
authors = ["Santosh Shrestha <santoshxshrestha@gmail.com> "]
description = "A replacement for the 'rm' command with a trash feature for safer file deletion."
license = "MIT"
repository = "https://github.com/santoshxshrestha/rmxt"
homepage = "https://github.com/santoshxshrestha/rmxt"
documentation = "https://github.com/santoshxshrestha/rmxt#readme"
readme = "README.md"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
colored = "3.0.0"
tabled = "0.20.0"
trash = "5.2.3"
